--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@solidjs/meta": "^0.28.2",
     "@solidjs/router": "^0.8.2",
+    "@supabase/supabase-js": "^2.21.0",
     "solid-js": "^1.7.2",
     "solid-start": "^0.2.26",
     "three": "^0.152.2",
